    - Revamped all icons visuals (recipes, items, variations).
    - Made the Terraformer's small radar part of the entity.
    - Advanced and normal fertilizer recipes make buildings glow green or pink.
    - Removed some useless secondary selection boxes.
    - The color of the bio-reactor's liquid now changes with the recipe.
    - Adjusted fluid colors and chemical plant recipe colors.
    - New mod logo.
    - 9 New signals (for blueprints, circuits, map points...)

  Localization:
    - Most descriptions and recipe titles rewritten to be more concise.
    - Some descriptions removed.
    - Color-coded the settings list according to default value (green for "on", orange for "off").

  Changes:
    - Re-organized mod recipes in a cleaner, more logical way.
    - Re-ordered items in the logistic request window to put them in vanilla categories
    - "Bio fuel conversion" numbers inverted.
    - Removed the "made in" section of recipes that are done in assembling machine
    - Simplified recipe information (result in title, removed "made in" for handmade recipes, removed some descriptions)
    - Removed some recipes parasiting the "total raw" calculation of other recipes (no more resin everywhere, wood is considered basic material)
    - Divided some recipes into smaller chunks for readability (e.g.: 2 bricks = 2 ash + 6 pebbles => 1 brick = 1 ash + 3 pebbles in half the time)
    - Changes if "Early wooden defenses" are enabled: Pistol will be replaced with the dart rifle; firearm magazines will be locked behind "Military 1"; stone walls and gun turrets will be locked behind "Military 2"; darts will get bonus effects from "Physical projectile damage" and "Weapon shooting speed" research (levels 1-4); bonus turret effects of "Physical projectile damage" (levels 1-3) will be removed from gun turrets.
    - Terraformer has 2 pipes in each direction instead of only 2. Lets the water pass through. (Only newly built ones)
